--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
 		"reverse proxy",
 		"nginx"
 	],
-	"repository": "https://github.com/cwarden/heroku-reverse-proxy",
+	"repository": "https://github.com/inspiredstuffs/heroku-reverse-proxy.git",
 	"buildpacks": [
 		{
 			"url": "http://github.com/leafo/heroku-buildpack-lua.git"
@@ -16,5 +16,5 @@
 			"description": "URL of upstream server to which all requests should be proxied"
 		}
 	},
-	"stack": "cedar-14"
+	"stack": "heroku-18"
 }
