--- a/nginx.conf
+++ b/nginx.conf
@@ -13,8 +13,10 @@ http {
 		listen ${{PORT}};
 
 		location / {
+			proxy_set_header Authorization ${{HTTP_AUTHORIZATION}};
+			proxy_pass_header  Authorization;
 			proxy_pass ${{UPSTREAM_SERVER}};
-			proxy_http_version 1.1;
+			# proxy_http_version 1.1;
 			proxy_buffering off;
 		}
 
