--- a/app.json
+++ b/app.json
@@ -14,6 +14,9 @@
 	"env": {
 		"UPSTREAM_SERVER": {
 			"description": "URL of upstream server to which all requests should be proxied"
+		},
+	"HTTP_AUTHORIZATION": {
+			"description": "a Base64 encoded string of your poxy authentication if exists. e.g. 'Basic dGVzdHN0cmluZw==' instead of 'Basic username:password'"
 		}
 	},
 	"stack": "heroku-18"
